Fix overlapping grid, add requirements

--- a/css/lg-view.css
+++ b/css/lg-view.css
@@ -12,7 +12,7 @@
       "post post post post sd sd"
       "post post post post sd sd"
       "ft ft ft ft ft ft";
-     }
+  }
 
   .post {
     display: grid;
@@ -28,5 +28,11 @@
     display: flex;
     flex-direction: row;
     grid-area: feat;
-    }
+  }
+
+  .sidebar {
+    display: grid;
+    grid-area: sd;
+    text-align: left;
+  }
 }
