--- a/css/med-view.css
+++ b/css/med-view.css
@@ -32,4 +32,10 @@
     grid-area: feat;
    
   }
+
+  .sidebar {
+    display: grid;
+    grid-area: sd;
+    text-align: left;
+  }
 }
